--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Peter van Kampen</title>
 </head>
 <body>
-    Test
+  <div class="container">
+
+    <div class="card col-xs-1 mt-5">
+      <img src="images/mesbg.jpg" class="card-img-top" alt="MESBG">
+      <div class="card-body">
+        <h5 class="card-title text-center">Middle-Earth Strategy Battle Game Resource Tracker</h5>
+        <p class="card-text text-center">An easy tracker to use in MESBG. Keeps track of Might, Will, Fate and Wounds for your heroes.</p>
+        <a href="SBG_Tracker/tracker.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Tracker</a>
+      </div>
+    </div>
+
+  </div>   
 </body>
 </html>
