Raise and decrease resources

--- a/SBG_Tracker/tracker.html
+++ b/SBG_Tracker/tracker.html
@@ -52,27 +52,27 @@
                     <br>
                     <p contenteditable="">0</p>
                     <br>
-                    <button onclick="lowerMight('0')">&#8249;</button>
-                    <p id="might0">0</p>
-                    <button onclick="upMight('0')">&#8250;</button>
+                    <button onclick="lowerWill('0')">&#8249;</button>
+                    <p id="will0">0</p>
+                    <button onclick="upWill('0')">&#8250;</button>
                 </div>
                 <div>
                     <p><b>Fate</b></p> 
                     <br>
                     <p contenteditable="">0</p>
                     <br>
-                    <button onclick="lowerMight('0')">&#8249;</button>
-                    <p id="might0">0</p>
-                    <button onclick="upMight('0')">&#8250;</button>
+                    <button onclick="lowerFate('0')">&#8249;</button>
+                    <p id="fate0">0</p>
+                    <button onclick="upFate('0')">&#8250;</button>
                 </div>
                 <div>
                     <p><b>Wounds</b></p> 
                     <br>
                     <p contenteditable="">0</p>
                     <br>
-                    <button onclick="lowerMight('0')">&#8249;</button>
-                    <p id="might0">0</p>
-                    <button onclick="upMight('0')">&#8250;</button>
+                    <button onclick="lowerWound('0')">&#8249;</button>
+                    <p id="wound0">0</p>
+                    <button onclick="upWound('0')">&#8250;</button>
                 </div>
                 
             </div>
