Add more Heroes

--- a/SBG_Tracker/tracker.html
+++ b/SBG_Tracker/tracker.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
 
         <div class="hero">          
             <input type="text" class="form-control" placeholder="Hero Name">
@@ -82,6 +82,6 @@
 
     </div> 
 
-    <button type="button" class="btn btn-outline-light btn-sm newHero" onclick="">Add Hero</button>
+    <button type="button" class="btn btn-outline-light btn-sm newHero" onclick="addHero()">Add Hero</button>
 </body>
 </html>
