--- a/SBG_Tracker/tracker.html
+++ b/SBG_Tracker/tracker.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>MESBG Resource Tracker</title>
 </head>
 <body>
     <div id="container">
@@ -41,7 +41,7 @@
                 <div>
                     <p><b>Might</b></p> 
                     <br>
-                    <p contenteditable="">0</p>
+                    <input type="text" class="form-control" placeholder="Amount">
                     <br>
                     <button onclick="lowerMight('0')">&#8249;</button>
                     <p id="might0">0</p>
@@ -50,7 +50,7 @@
                 <div>
                     <p><b>Will</b></p> 
                     <br>
-                    <p contenteditable="">0</p>
+                    <input type="text" class="form-control" placeholder="Amount">
                     <br>
                     <button onclick="lowerWill('0')">&#8249;</button>
                     <p id="will0">0</p>
@@ -59,7 +59,7 @@
                 <div>
                     <p><b>Fate</b></p> 
                     <br>
-                    <p contenteditable="">0</p>
+                    <input type="text" class="form-control" placeholder="Amount">
                     <br>
                     <button onclick="lowerFate('0')">&#8249;</button>
                     <p id="fate0">0</p>
@@ -68,7 +68,7 @@
                 <div>
                     <p><b>Wounds</b></p> 
                     <br>
-                    <p contenteditable="">0</p>
+                    <input type="text" class="form-control" placeholder="Amount">
                     <br>
                     <button onclick="lowerWound('0')">&#8249;</button>
                     <p id="wound0">0</p>
