--- a/SBG_Tracker/tracker.html
+++ b/SBG_Tracker/tracker.html
@@ -12,8 +12,9 @@
 <body>
     <div id="container">
 
-        <div class="hero">          
-            <input type="text" class="form-control" placeholder="Hero Name">
+        <div class="hero">      
+            <h5><b>Hero Name</b></h5>    
+            <p id="heroName" contenteditable="true"></p>
             <button type="button" class="btn btn-outline-secondary btn-sm" onclick="statBlock('0')">Stats</button>
             <div class="stats" id="stats0" style="display: none;">
                 <table style="width:90%">
@@ -41,7 +42,7 @@
                 <div>
                     <p><b>Might</b></p> 
                     <br>
-                    <input type="text" class="form-control" placeholder="Amount">
+                    <p id="resourceAmount" contenteditable="true"></p>
                     <br>
                     <button onclick="lowerMight('0')">&#8249;</button>
                     <p id="might0">0</p>
@@ -50,7 +51,7 @@
                 <div>
                     <p><b>Will</b></p> 
                     <br>
-                    <input type="text" class="form-control" placeholder="Amount">
+                    <p id="resourceAmount" contenteditable="true"></p>
                     <br>
                     <button onclick="lowerWill('0')">&#8249;</button>
                     <p id="will0">0</p>
@@ -59,7 +60,7 @@
                 <div>
                     <p><b>Fate</b></p> 
                     <br>
-                    <input type="text" class="form-control" placeholder="Amount">
+                    <p id="resourceAmount" contenteditable="true"></p>
                     <br>
                     <button onclick="lowerFate('0')">&#8249;</button>
                     <p id="fate0">0</p>
@@ -68,7 +69,7 @@
                 <div>
                     <p><b>Wounds</b></p> 
                     <br>
-                    <input type="text" class="form-control" placeholder="Amount">
+                    <p id="resourceAmount" contenteditable="true"></p>
                     <br>
                     <button onclick="lowerWound('0')">&#8249;</button>
                     <p id="wound0">0</p>
