--- a/SBG_Tracker/tracker.html
+++ b/SBG_Tracker/tracker.html
@@ -15,7 +15,7 @@
         <div class="hero">      
             <h3><b>Hero Name</b></h3>    
             <p id="heroName" contenteditable="true"></p>
-            <button type="button" class="btn btn-outline-secondary btn-sm" onclick="statBlock('0')">Stats</button>
+            <button type="button" class="btn btn-outline-secondary btn-sm statButton" onclick="statBlock('0')">Stats</button>
             <div class="stats" id="stats0" style="display: none;">
                 <table style="width:90%">
                     <tr>
