--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
   <div class="container">
 
     <div class="card col-xs-1 mt-5">
+      <img src="images/matched_play.png" class="card-img-top" alt="MESBG">
+      <div class="card-body">
+        <h5 class="card-title text-center">Middle-Earth Strategy Battle Game Battle Guide</h5>
+        <p class="card-text text-center">An easy tool to use in MESBG. Keeps track of all things needed for playing a matched game.</p>
+        <a href="Battle_Guide/battle_guide.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Battle Guide</a>
+      </div>
+    </div>
+
+    <div class="card col-xs-1 mt-5">
+      <img src="images/scenarios.png" class="card-img-top" alt="MESBG">
+      <div class="card-body">
+        <h5 class="card-title text-center">Middle-Earth Strategy Battle Game Scenario Selector</h5>
+        <p class="card-text text-center">An easy tool to use in MESBG. Randomly selects three scenario's and lets players veto one scenario each.</p>
+        <a href="Scenario_Selector/scenario.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Scenario Selector</a>
+      </div>
+    </div>
+
+    <div class="card col-xs-1 mt-5">
       <img src="images/mesbg.jpg" class="card-img-top" alt="MESBG">
       <div class="card-body">
         <h5 class="card-title text-center">Middle-Earth Strategy Battle Game Resource Tracker</h5>
         <p class="card-text text-center">An easy tracker to use in MESBG. Keeps track of Might, Will, Fate and Wounds for your heroes.</p>
-        <a href="SBG_Tracker/tracker.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Tracker</a>
+        <a href="SBG_Tracker/tracker.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Tracker (Outdated)</a>
       </div>
     </div>
 
