Logic fully functional. Only needs more data in json file now

--- a/Scenario_Selector/scenario.html
+++ b/Scenario_Selector/scenario.html
@@ -24,20 +24,146 @@
         </div>
 
         <div class="side_selection box hidden">
-            <h2>The first veto will be made by:</h2>
+            <h3>The first veto will be made by:</h3>
             <h1></h1>
         </div>
 
-        <div class="scenario_1 scenario box hidden">
-            <div class="title"></div>
+        <div class="scenario_1 scenario box hidden"  onclick="expandScenario(document.querySelector('.scenario_1'))">
+            <div class="scenario_heading">
+                <h3 class="title"></h3>
+                <button class="expand">
+                    &#9660;
+                </button>
+            </div>
+            <div class="scenario_body">
+
+                <div class="outline">
+                    <h3>Scenario Outline</h3>
+                    <p></p>
+                </div>
+
+                <div class="layout">
+                    <h3>Layout</h3>
+                    <p></p>
+                    <img src="#" alt="layout_image">
+                </div>
+
+                <div class="starting_position">
+                    <h3>Starting Positions</h3>
+                    <p></p>
+                </div>
+
+                <div class="priority">
+                    <h3>Initial Priority</h3>
+                    <p></p>
+                </div>
+
+                <div class="objectives">
+                    <h3>Objectives</h3>
+                    <p></p>
+                </div>
+
+                <div class="victory_points">
+                    <h3>Victory Points</h3>
+                    <ul></ul>
+                </div>
+
+                <div class="special_rules hidden">
+                    <h3>Special Rules</h3>
+                </div>
+            </div>
         </div>
 
-        <div class="scenario_2 scenario box hidden">
-            <div class="title"></div>
+        <div class="scenario_2 scenario box hidden" onclick="expandScenario(document.querySelector('.scenario_2'))">
+            <div class="scenario_heading">
+                <h3 class="title"></h3>
+                <button class="expand">
+                    &#9660;
+                </button>
+            </div>
+            <div class="scenario_body">
+
+                <div class="outline">
+                    <h3>Scenario Outline</h3>
+                    <p></p>
+                </div>
+
+                <div class="layout">
+                    <h3>Layout</h3>
+                    <p></p>
+                    <img src="#" alt="layout_image">
+                </div>
+
+                <div class="starting_position">
+                    <h3>Starting Positions</h3>
+                    <p></p>
+                </div>
+
+                <div class="priority">
+                    <h3>Initial Priority</h3>
+                    <p></p>
+                </div>
+
+                <div class="objectives">
+                    <h3>Objectives</h3>
+                    <p></p>
+                </div>
+
+                <div class="victory_points">
+                    <h3>Victory Points</h3>
+                    <ul></ul>
+                </div>
+
+                <div class="special_rules hidden">
+                    <h3>Special Rules</h3>
+                </div>
+            </div>
         </div>
 
-        <div class="scenario_3 scenario box hidden">
-            <div class="title"></div>
+        <div class="scenario_3 scenario box hidden" onclick="expandScenario(document.querySelector('.scenario_3'))">
+            <div class="scenario_heading">
+                <h3 class="title"></h3>
+                <button class="expand">
+                    &#9660;
+                </button>
+            </div>
+            <div class="scenario_body">
+
+                <div class="outline">
+                    <h3>Scenario Outline</h3>
+                    <p></p>
+                </div>
+
+                <div class="layout">
+                    <h3>Layout</h3>
+                    <p></p>
+                    <img src="#" alt="layout_image">
+                </div>
+
+                <div class="starting_position">
+                    <h3>Starting Positions</h3>
+                    <p></p>
+                </div>
+
+                <div class="priority">
+                    <h3>Initial Priority</h3>
+                    <p></p>
+                </div>
+
+                <div class="objectives">
+                    <h3>Objectives</h3>
+                    <p></p>
+                </div>
+
+                <div class="victory_points">
+                    <h3>Victory Points</h3>
+                    <ul></ul>
+                </div>
+
+                <div class="special_rules hidden">
+                    <h3>Special Rules</h3>
+                </div>
+            </div>
         </div>
     </div> 
 </body>
