--- a/Scenario_Selector/scenario.html
+++ b/Scenario_Selector/scenario.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header box">
-            <h1>Scenario selector</h1>
+            <h1>Scenario Selector</h1>
             <p>
                 Click the button below to randomly select three Scenarios
                 <br><br>
