Return to main menu button

--- a/Scenario_Selector/scenario.html
+++ b/Scenario_Selector/scenario.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div class="container">
+        <nav>
+            <a href="../index.html">&#11160;</a>
+        </nav>
+
         <div class="header box">
             <h1>Scenario Selector</h1>
             <p>
