--- a/Scenario_Selector/scenario.html
+++ b/Scenario_Selector/scenario.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <nav>
-            <a href="../index.html">&#8592;</a>
+            <a href="../index.html">←</a>
         </nav>
 
         <div class="header box">
