Added overview for all scenarios

--- a/Scenario_Selector/scenario.html
+++ b/Scenario_Selector/scenario.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <nav>
-            <a href="../index.html">←</a>
+            <a href="../index.html">Back</a>
+            <a href="./all.html">All Scenarios</a>
         </nav>
 
         <div class="header box">
