All BC Scenarios

--- a/Scenario_Selector/scenario.html
+++ b/Scenario_Selector/scenario.html
@@ -15,6 +15,12 @@
             <a href="./all.html">All Scenarios</a>
         </nav>
 
+        <div class="toggle">
+            <button class="toggle_option_1" onclick="optionClick(1)">Matched Play</button>
+            <button class="toggle_option_2" onclick="optionClick(2)">Battle Companies</button>
+            <span class="toggle_slider"></span>
+        </div>
+
         <div class="header box">
             <h1>Scenario Selector</h1>
             <p>
