Remove battle guide + inventory setup

--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
 </head>
 <body>
   <div class="container">
-
-    <div class="card col-xs-1 mt-5">
-      <img src="images/matched_play.png" class="card-img-top" alt="MESBG">
-      <div class="card-body">
-        <h5 class="card-title text-center">Middle-Earth Strategy Battle Game Battle Guide</h5>
-        <p class="card-text text-center">An easy tool to use in MESBG. Keeps track of all things needed for playing a matched game.</p>
-        <a href="Battle_Guide/battle_guide.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Battle Guide</a>
-      </div>
-    </div>
-
     <div class="card col-xs-1 mt-5">
       <img src="images/scenarios.png" class="card-img-top" alt="MESBG">
       <div class="card-body">
@@ -34,7 +24,16 @@
       <div class="card-body">
         <h5 class="card-title text-center">Middle-Earth Strategy Battle Game Resource Tracker</h5>
         <p class="card-text text-center">An easy tracker to use in MESBG. Keeps track of Might, Will, Fate and Wounds for your heroes.</p>
-        <a href="SBG_Tracker/tracker.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Tracker (Outdated)</a>
+        <a href="SBG_Tracker/tracker.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Tracker</a>
+      </div>
+    </div>
+
+    <div class="card col-xs-1 mt-5">
+      <img src="images/repository.jpg" class="card-img-top" alt="MESBG">
+      <div class="card-body">
+        <h5 class="card-title text-center">Middle-Earth Strategy Battle Game Inventory</h5>
+        <p class="card-text text-center">A tool to use for keeping track of owned MESBG miniatures</p>
+        <a href="Inventory/inventory.html" class="btn btn-primary mx-auto" style="width: 100%;">MESBG Inventory</a>
       </div>
     </div>
 
