--- a/Inventory/inventory.html
+++ b/Inventory/inventory.html
@@ -25,6 +25,9 @@
         </nav>
 
         <div class="content">
+            <h3 class="faction-header">
+                Factions
+            </h3>
             <div js-faction-container class="faction-container">
                 No minis found in the inventory
             </div>
